--- a/package.json
+++ b/package.json
@@ -19,6 +19,10 @@
         "popper.js": "^1.15.0",
         "resolve-url-loader": "^2.3.1",
         "sass": "^1.19.0",
-        "sass-loader": "^7.1.0"
+        "sass-loader": "^7.1.0",
+        "vue-template-compiler": "^2.6.10"
+    },
+    "dependencies": {
+        "chart.js": "^2.8.0"
     }
 }
